deploy/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-portfolio-dev
  labels:
    app: web-portfolio-dev
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-portfolio-dev
  template:
    metadata:
      labels:
        app: web-portfolio-dev
        environment: dev
    spec:
      containers:
        - name: web-portfolio
          image: ghcr.io/joex422/web-portfolio:dev-bootstrap
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
