deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-portfolio-dev
spec:
  type: ClusterIP
  selector:
    app: web-portfolio-dev
  ports:
    - name: http
      port: 80
      targetPort: http
